--- a/CCWeb/CCWeb.csproj
+++ b/CCWeb/CCWeb.csproj
@@ -127,6 +127,7 @@
   <ItemGroup>
     <Content Include="app\services\entityManagerFactory.js" />
     <Content Include="app\session\Sessions.html" />
+    <Content Include="app\session\sessions.js" />
     <Content Include="ccfavicon.ico" />
     <Content Include="content\breeze.directives.css" />
     <Content Include="fonts\fontawesome-webfont.woff" />
